# rust-and-opengl-lessons

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  lesson-04-snippet.rs
lesson-02/: Cargo.toml
lesson-03/: Cargo.toml
lesson-04/: Cargo.toml
lesson-05/: Cargo.toml
lesson-06/: Cargo.toml
lesson-07/: Cargo.toml  build.rs
lesson-07/shaders/: triangle.frag
lesson-07/src/: main.rs  render_gl.rs  resources.rs
lesson-08/: Cargo.toml  build.rs
lesson-08-next/: Cargo.toml
lesson-08/src/: main.rs  resources.rs
lesson-09/: Cargo.toml  build.rs
lesson-10/: Cargo.toml  build.rs
lesson-10-tmp/: Cargo.toml
lesson-10-tmp/render_gl/: Cargo.toml
lesson-10-tmp/render_gl/render_gl_derive/: Cargo.toml
lesson-10-tmp/render_gl/render_gl_derive/src/: lib.rs
lesson-10-tmp/render_gl/src/: data.rs  lib.rs
lesson-10-tmp/resources/: Cargo.toml
lesson-10-tmp/src/: main.rs
lesson-10/assets/shaders/: triangle.vert
lesson-10/render_gl/: Cargo.toml
lesson-10/render_gl/src/: lib.rs
lesson-10/render_gl_derive/: Cargo.toml
lesson-10/render_gl_derive/src/: lib.rs
lesson-10/resources/: Cargo.toml
lesson-10/resources/src/: lib.rs
lesson-10/src/: main.rs
lesson-10/src/render_gl/: data.rs  mod.rs
lesson-11/: Cargo.toml  build.rs
lesson-12/: build.rs  (+1 more)
lesson-13/: Cargo.toml  build.rs
lesson-13/render_gl_derive/: Cargo.toml
lesson-13/render_gl_derive/src/: lib.rs
lesson-13/src/: main.rs  triangle.rs
lesson-13/src/render_gl/: color_buffer.rs  data.rs  mod.rs  shader.rs
lesson-20-x/: Cargo.toml  build.rs
lesson-20-x/assets/shaders/: cube.vert
lesson-20-x/render_gl_derive/: Cargo.toml
lesson-20-x/src/: cube.rs  main.rs
lesson-20-x/src/mesh/: mod.rs
lesson-20-x/src/render_gl/: buffer.rs  mod.rs  texture.rs
lesson-20-x/src/render_gl/debug_lines/: mod.rs  shared_debug_lines.rs
lesson-20-x/src/resources/: error.rs  mod.rs  path.rs
lesson-23-x/: Cargo.toml  build.rs
lesson-23-x/render_gl_derive/src/: lib.rs
lesson-23-x/src/: dice.rs  main.rs
lesson-23-x/src/dices/: buffers.rs  dice_material.rs  mod.rs
lesson-23-x/src/entities/: dice.rs  mod.rs
lesson-23-x/src/mesh/: mod.rs
lesson-23-x/src/propagation/: mod.rs  shared_propagation.rs
lesson-23-x/src/render/: mod.rs
lesson-23-x/src/render_gl/: buffer.rs  mod.rs  profiler.rs  shader.rs
lesson-23-x/src/render_gl/debug_lines/: buffers.rs  line_point.rs  mod.rs  shared_debug_lines.rs
lesson-23-x/src/render_gl/profiler/: buffers.rs  event_count_profiler.rs  frame_profiler.rs  mod.rs
lesson-23-x/src/resources/: obj.rs
lesson-23-x/src/selection/: mod.rs  shared_selectables.rs
lesson-23-x/src/system/: mod.rs
lesson-23-x/src/system/alloc/: alloc_watch.rs  mod.rs
lesson-23-x/src/system/input/: camera.rs  mod.rs  selectables.rs  window.rs
lesson-23-x/src/system/profiling/: alloc_watch.rs  gl_watch.rs  mod.rs
lesson-23-x/src/system/render/: mod.rs
lesson-24-x/: Cargo.toml  presentation.md
lesson-24-x-text/render_gl/: Cargo.toml
lesson-24-x-text/render_gl/src/: color_buffer.rs  lib.rs  shader.rs  viewport.rs
lesson-24-x-text/render_gl/src/debug_lines/: buffers.rs  mod.rs  shared_debug_lines.rs
lesson-24-x-text/render_gl/src/flatlander/: buffers.rs  flatland.rs  mod.rs
lesson-24-x-text/render_gl/src/profiler/: buffers.rs  event_count_profiler.rs  frame_profiler.rs
lesson-24-x-text/ui/: Cargo.toml
lesson-24-x-text/ui/src/: fonts.rs  lib.rs  primitives.rs  shapes.rs  svg.rs  tree.rs
lesson-24-x/assets/: Cargo.toml
lesson-24-x/core/shaders/: simple.frag
lesson-24-x/core/shaders/render_gl/: flatland.vert
lesson-24-x/render/: Cargo.toml
lesson-24-x/render/src/: lib.rs
lesson-24-x/render_gl/: Cargo.toml
lesson-24-x/render_gl/lib/: data.rs
lesson-24-x/render_gl/src/: buffer.rs  color_buffer.rs  lib.rs  shader.rs  text.rs
lesson-24-x/render_gl/src/debug_lines/: buffers.rs  mod.rs  shared_debug_lines.rs
lesson-24-x/render_gl/src/flatlander/: buffers.rs  flatland.rs  mod.rs  shared.rs
lesson-24-x/render_gl/src/profiler/: event_count_profiler.rs
lesson-24-x/render_gl_derive/: Cargo.toml
lesson-24-x/src/: interface.rs  main.rs
lesson-24-x/src/camera/: movement.rs  target_camera.rs
lesson-24-x/src/interface/: controls.rs  mod.rs
lesson-24-x/src/interface/controls/: mod.rs  presentation.rs  rust_fest.rs  test.rs
lesson-24-x/src/profiling/: alloc.rs  mod.rs
lesson-24-x/src/system/: mod.rs
lesson-24-x/src/system/input/: mod.rs  window.rs
lesson-24-x/ui/: Cargo.toml
lesson-24-x/ui/src/: shapes.rs
lesson-25-x-image-gen/: Cargo.toml  README.md
lesson-25-x-image-gen/core/shaders/render_gl/: flatland.vert
lesson-25-x-image-gen/render/: Cargo.toml
lesson-25-x-image-gen/render_gl/: Cargo.toml
lesson-25-x-image-gen/render_gl/src/: color_buffer.rs  data.rs  lib.rs
lesson-25-x-image-gen/render_gl/src/debug_lines/: mod.rs
lesson-25-x-image-gen/render_gl/src/flatlander/: mod.rs
lesson-25-x-image-gen/render_gl/src/profiler/: buffers.rs
lesson-25-x-image-gen/src/: debug.rs  main.rs
lesson-25-x-image-gen/src/camera/: movement.rs
lesson-25-x-image-gen/src/interface/: mod.rs
lesson-25-x-image-gen/src/interface/controls/: mod.rs  presentation.rs  rust_fest.rs
lesson-25-x-image-gen/src/profiling/: alloc.rs
lesson-25-x-image-gen/src/system/input/: mod.rs
lesson-25-x-image-gen/ui/: Cargo.toml
lesson-25-x-image-gen/ui/src/: queues.rs  tree.rs
lesson-25-x-terrain/: Cargo.toml
lesson-25-x-terrain/core/: Windows.toml
lesson-25-x-terrain/core/shaders/: quad.frag  quad.vert
lesson-25-x-terrain/render_gl/: Cargo.toml
lesson-25-x-terrain/render_gl/src/: lib.rs  render_target.rs
lesson-25-x-terrain/render_gl_derive/: Cargo.toml
lesson-25-x-terrain/src/: debug.rs  main.rs
lib/resources/: Cargo.toml
lib/resources/src/: error.rs  lib.rs  path.rs  shared.rs
lib/resources/src/backend/: filesystem.rs  in_memory.rs  lzma.rs  miniz.rs  mod.rs
lib/resources/src/shared/: mod.rs  resource_metadata.rs
lib/ui/: Cargo.toml
lib/ui/src/: fonts.rs  lib.rs  primitives.rs  queues.rs  schema.rs  tree.rs
(+194 files in other folders)
