[package]
name = "lesson-08"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]

[dependencies]
gl = { path = "../lib/gl" }
failure = "0.1"

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]