[package]
name = "lesson-24-x"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]

[dependencies]
gl = { path = "../lib/gl" }
resources = { path = "../lib/resources", features = ["backend_filesystem"] }
lesson_24_x_render = { path = "render" }
lesson_24_x_render_gl = { path = "render_gl" }
lesson_24_x_render_gl_derive = { path = "render_gl_derive" }
failure = "0.1"

[features]
gl_debug = ["gl/debug"]
alloc_debug = []