[package]
name = "lesson-24-x"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]

[dependencies]
gl = { path = "../lib/gl" }
resources = { path = "../lib/resources", features = ["backend_filesystem"] }
ui = { path = "../lib/ui" }
lesson_24_x_render = { path = "render" }
lesson_24_x_render_gl = { path = "render_gl" }
lesson_24_x_render_gl_derive = { path = "render_gl_derive" }
failure = "0.1.3"

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]

[features]
gl_debug = ["gl/debug"]
alloc_debug = []