[package]
name = "lesson-25-x"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]

[dependencies]
gl = { path = "../lib/gl" }
failure = "0.1.3"
env_logger = "*"
log = "0.4.6"

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]

[features]
gl_debug = ["gl/debug"]
alloc_debug = []