[package]
name = "lesson_24_x_render_gl"
version = "0.1.0"
authors = []

[dependencies]
gl = { path = "../../lib/gl" }
resources = { path = "../../lib/resources" }
lesson_24_x_render_gl_derive = { path = "../render_gl_derive" }
half = "1.1.1"
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.16"
ncollide3d = "0.17"
failure = "0.1.3"