[package]
name = "lesson_24_x_render_gl"
version = "0.1.0"
authors = []

[dependencies]
gl = { path = "../../lib/gl" }
resources = { path = "../../lib/resources" }
lesson_24_x_render_gl_derive = { path = "../render_gl_derive" }
half = "1.1.1"
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.16"
ncollide3d = "0.17"
failure = "0.1.3"
font-kit = { version = "0.1.0", path = "../../patches/font-kit" }
euclid = "0.18.2"
image = "0.20.1"
lyon_tessellation = "0.11.0"
lyon_path = "0.11.0"
int_hash = "0.1.1"
slotmap = "0.3"