[package]
name = "resources"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]

[features]
default = []
backend_in_memory = []
backend_miniz = ["miniz_oxide"]
backend_filesystem = []

[dependencies]
failure = "0.1"
slab = "0.4"
twox-hash = "1.1"

miniz_oxide = { version = "0.1", optional = true }

[dev-dependencies]
miniz_oxide = "0.1"