[package]
name = "resources"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]

[features]
default = []
backend_in_memory = []
backend_miniz = ["miniz_oxide"]
backend_filesystem = []
backend_filesystem_watch = ["backend_filesystem", "notify"]

[dependencies]
failure = "0.1.3"
slab = "0.4"
twox-hash = "1.1"
log = "0.4.6"

miniz_oxide = { version = "0.1", optional = true }
notify = { version = "4.0.0", optional = true }

[dev-dependencies]
miniz_oxide = "0.1"